# telegrams-bot

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
config/: config.json
include/: api.h  bot.h  clock.h  json_helper.h  push-up-bot.h  reader-bot.h
include/api/: api.h
include/bot/: bot.h
include/helpers/: json_helper.h  slavic_form.h
include/push-up-bot/: json_helper.h  push-up-bot.h
include/reader-bot/: conversation.h  json_helper.h  reader-bot.h  storage.h
include/time/: time.h
src/: api.cpp  bot.cpp  clock.cpp  main.cpp  push-up-bot.cpp  reader-bot.cpp
src/api/: api.cpp
src/bot/: bot.cpp
src/push-up-bot/: main.cpp  push-up-bot.cpp
src/reader-bot/: conversation.cpp  info.txt  main.cpp  read_me.txt  reader-bot.cpp  rules.txt
src/time/: time.cpp
